Made the applicant information table-like so that the text no longer tries to wrap around the picture

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -65,11 +65,11 @@ h4 {
   color: red;
 }
 
-.scholar-info {
+.applicant-info {
   color: #000000;
 }
 
-.scholar-info img {
+.applicant-info img {
   margin-right: 20px;
 }
 
